fixed some spacing

--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -164,7 +164,9 @@ a:hover {
   cursor: pointer;
 }
 
-
+.modalPic {
+  min-width: 50%;
+}
 
 
 h1 {
